--- a/css/utility.css
+++ b/css/utility.css
@@ -9,14 +9,20 @@
     top: 1%;
     left: 96%;
 	background-color : #a9e0ea;
+	border: none;
+	font-weight: bold;
+	cursor: pointer;
 }
 
 #usefulLinkButton{
     position:absolute;
     transition: .5s ease;
     top: 1%;
-    left: 94%;
+    left: 92%;
 	background-color : #a9e0ea;
+	border: none;
+	font-weight: bold;
+    cursor: pointer;
 }
 
 .codingSectionName{
