added subset subset-ii

--- a/css/utility.css
+++ b/css/utility.css
@@ -26,9 +26,9 @@
 }
 
 .codingSectionName{
-    font-size : 50px;
+    font-size : 60px;
 	color : blue;
-
+    text-align : center;
 }
 
 .codingSubSectionName{
